Cros splitscreen - Fix the long press behavior for Arc App window.

The reason is snapping an Arc app window is an async operation, so when
overview grid is opened, it's possible that Arc app window hasn't been
snapped successfully, and in this case it will put in the overview mode.
To fix this problem, we open the overview first and then snap the
desired window.

Bug: 826929
Change-Id: I7ba477e0fa3bc60f567ef07c53e2130dade35033
Reviewed-on: https://chromium-review.googlesource.com/985210
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546654}
Former-commit-id: 5e532526ad7b99ce683e64d3d9e6d4e966b9c98c